--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          class="px-4 py-2 bg-indigo-600 rounded-xl shadow hover:bg-indigo-500 transition">
         Back to Main Site
       </a>
-      <a href="mailto:contact@akanedev.au" 
+      <a href="mailto:labs@akanedev.au" 
          class="px-4 py-2 bg-slate-700 rounded-xl shadow hover:bg-slate-600 transition">
         Contact Me
       </a>
