--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white">
   <div class="text-center space-y-6">
     <h1 class="text-4xl md:text-6xl font-bold">AkaneDev Labs</h1>
-    <p class="text-lg md:text-xl text-slate-300">Shop is launching soon — stay tuned!</p>
+    <p class="text-lg md:text-xl text-slate-300">Labs is launching soon — stay tuned!</p>
     
     <div class="flex justify-center space-x-4">
       <a href="https://akanedev.au" 
