Updating and prepairing for Akanedev Labs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="AkaneDev Labs — games, engines, and professional software. Coming soon.">
   <title>AkaneDev Labs — Coming Soon</title>
+  <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Open Graph / Discord Embed -->
+  <meta property="og:title" content="AkaneDev Labs — Coming Soon">
+  <meta property="og:description" content="AkaneDev Labs is launching soon. Stay tuned!">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://labs.akanedev.au">
+  <meta property="og:image" content="/preview.png"> <!-- replace with your own hosted image -->
+  <meta property="og:image:alt" content="AkaneDev Labs Logo">
+
+  <!-- Twitter Card (optional, shows better on X/Twitter) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AkaneDev Labs — Coming Soon">
+  <meta name="twitter:description" content="AkaneDev Labs is launching soon. Stay tuned!">
+  <meta name="twitter:image" content="/preview.png"> <!-- replace with your own hosted image -->
 </head>
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white">
   <div class="text-center space-y-6">
